--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Password generator</title>
 </head>
 <body>
 
-    <div id="output"></div>
+    <div class="box">
+        <div id="output"></div>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
